# jeopardy

./: .gitignore  README.md  pyproject.toml
AI/: extract_svoya_igra.py  ocr.ipynb  transcript_01_01_2003.txt  whisper.ipynb
dataset_ru/: 2022_01_22.json  questions.json
gameshows/: games.json  gameshows.ipynb  parse_svoya_igra.py  seasons.json  test_parse_svoya_igra.py
