[project]
name = "jeopardy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.3.1",
    "browser-cookie3>=0.20.1",
    "easyocr>=1.7.2",
    "google-genai>=2.10.0",
    "imagehash>=4.3.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "mypy>=1.20.2",
    "numpy>=2.4.4",
    "openai-whisper>=20250625",
    "opencv-python>=4.13.0.92",
    "paddle",
    "paddleocr>=2.10.0",
    "paddlepaddle>=3.3.1",
    "pandas>=3.0.3",
    "yt-dlp>=2026.3.17",
]
